# ros2_yaml_parser

./: CMakeLists.txt  README.md  package.xml
config/: spots.yaml
launch/: yaml_test.launch.py
scripts/: test.py
